--- a/Input/styles.css
+++ b/Input/styles.css
@@ -14,6 +14,32 @@
  * limitations under the License.
  */
 
+
+
+/* Alterações */
+.mdl-button--file {
+  input {
+    cursor: pointer;
+    height: 100%;
+    right: 0;
+    opacity: 0;
+    position: absolute;
+    top: 0;
+    width: 300px;
+    z-index: 4;
+  }
+}
+
+.mdl-textfield--file {
+  .mdl-textfield__input {
+    box-sizing: border-box;
+    width: calc(100% - 32px);
+  }
+  .mdl-button--file {
+    right: 0;
+  }
+}
+
 html, body {
   font-family: 'Roboto', 'Helvetica', sans-serif;
 }
